[tool.poetry]
name = "fortests"
version = "0.1.0"
description = ""
authors = ["Hellsius <vlkolohat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.black]
target-version = ["py312"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
